# documents-manager

./: .coveragerc  .gitignore  README.md  documents-manager.code-workspace  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
config/: urls.py
config/settings/: base.py  local.py  production.py
documents/: models.py  querysets.py  serializers.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_remove_documenttag_documents_d_documen_8c4441_idx_and_more.py
documents/tests/: base.py  test_api.py  test_models.py  test_querysets.py
