[project]
name = "documents-manager"
version = "0.1.0"
description = "Basic clone of Paperless NGX"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
]
